tests/fixtures/import/sample-iptables-save.txt
# Generated by iptables-save v1.8.7 on Wed Oct  1 10:00:00 2026
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
:svc - [0:0]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -s 192.0.2.0/24 -p tcp -m tcp --dport 22 -m comment --comment "ssh \"admin\"" -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 8 -m limit --limit 5/sec -j ACCEPT
-A INPUT -p tcp -m multiport --dports 80,443,8000:8080 -j svc
-A INPUT -p tcp -m tcp --dport 25 -j LOG --log-prefix "smtp " --log-level 6
-A INPUT -p tcp -m tcp --dport 25 -j DROP
-A FORWARD -i eth1 -o eth0 -s 10.0.0.0/8 -m conntrack --ctstate NEW -j ACCEPT
-A FORWARD -m recent --set -j ACCEPT
-A svc -j REJECT --reject-with tcp-reset
COMMIT
*nat
:PREROUTING ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A PREROUTING -d 198.51.100.1/32 -p tcp -m tcp --dport 80 -j DNAT --to-destination 192.168.1.10:8080
-A POSTROUTING -o eth0 -j MASQUERADE
COMMIT
