tests/fixtures/import/sample-routes-addr.json
[{"ifindex":1,"ifname":"lo","flags":["LOOPBACK"],"mtu":65536,"qdisc":"noop","operstate":"DOWN","group":"default","txqlen":1000,"link_type":"loopback","address":"00:00:00:00:00:00","broadcast":"00:00:00:00:00:00","addr_info":[]},{"ifindex":2,"ifname":"eth0","flags":["BROADCAST","NOARP","UP","LOWER_UP"],"mtu":1500,"qdisc":"noqueue","operstate":"UNKNOWN","group":"default","txqlen":1000,"link_type":"ether","address":"ba:5a:cf:f0:51:19","broadcast":"ff:ff:ff:ff:ff:ff","addr_info":[{"family":"inet","l [...]
