tests/fixtures/import/sample-routes4.json
[{"dst":"10.6.0.0/16","gateway":"192.0.2.30","dev":"eth0","table":"100","flags":[]},{"dst":"default","gateway":"192.0.2.254","dev":"eth0","metric":100,"flags":[]},{"dst":"10.1.0.0/16","gateway":"198.51.100.254","dev":"eth1","protocol":"static","flags":[]},{"dst":"10.2.0.0/16","dev":"eth1","scope":"link","flags":[]},{"dst":"10.3.0.5","gateway":"192.0.2.10","dev":"eth0","prefsrc":"192.0.2.1","flags":[],"metrics":[{"mtu":1400}]},{"dst":"10.4.0.0/16","flags":[],"nexthops":[{"gateway":"192.0.2.20","d [...]
