tests/fixtures/import/sample-routes6.json
[{"dst":"2001:db8::/64","dev":"eth0","protocol":"kernel","metric":256,"flags":[],"pref":"medium"},{"dst":"2001:db8:5::/48","gateway":"2001:db8::5","dev":"eth0","metric":1024,"flags":[],"pref":"medium"},{"dst":"fe80::/64","dev":"eth0","protocol":"kernel","metric":256,"flags":[],"pref":"medium"},{"dst":"fe80::/64","dev":"eth1","protocol":"kernel","metric":256,"flags":[],"pref":"medium"},{"dst":"default","gateway":"fe80::1","dev":"eth0","metric":1024,"flags":[],"pref":"medium"},{"type":"local","dst [...]
